# Blackguard

./: .gitignore  Assets.cpp  Assets.h  CMakeLists.txt  CODING.md  Game.cpp  Game.h  README.md  config.h.in  main.cpp
Assets/: Attribution.txt  NewHouseTileset.xcf  attribute.txt  level1.tmx  level2.tmx  level3.tmx  level4.tmx  newTest.tmx  tavern.tmx  test.tmx  testlevel.tmx  themansion.tmx
CMakeModules/: EnableCPP11Flag.cmake
Source/: AABB.cpp  AABB.h  AbstractGameState.cpp  AbstractGameState.h  Assets.cpp  Assets.h  CMakeLists.txt  Entity.h  EntityTypes.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameState.h  Guard.cpp  Guard.h  Loot.cpp  Loot.h  Map.cpp  Map.h  OpenGL.h  PathFinder.cpp  PathFinder.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  TileMap.cpp  TileMap.h  Win32.h  main.cpp
Source/BurglaryState/: BurglaryState.cpp  BurglaryState.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityWorldInterface.h  Exit.cpp  Exit.h  Guard.cpp  Guard.h  Light.cpp  Light.h  Loot.cpp  Loot.h  NoiseSystem.cpp  NoiseSystem.h  Player.cpp  Player.h  Stone.cpp  Stone.h
Source/Dependencies/: base64.h
Source/Utility/: Direction.cpp  Direction.h  GameMath.cpp  GameMath.h  GameMath.impl.h  StringUtilities.cpp  StringUtilities.h  StringUtilities.impl.h  SwitchParser.cpp  SwitchParser.h
Source/Utils/: SwitchParser.cpp  SwitchParser.h
Source/WorldmapState/: WorldmapState.cpp  WorldmapState.h
